<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_0"
    android:layout_height="match_parent"
    tools:context=".fogotpassword">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/charis_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="117dp"
        android:fontFamily="@font/charissil_bolditalic"
        android:textSize="18sp"
        android:layout_marginEnd="123dp"
        android:text="@string/caption" />

    <TextView
        android:id="@+id/labelreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="228dp"
        android:fontFamily="@font/charissil_bolditalic"
        android:text="@string/reset"
        android:textSize="18sp" />

    <EditText
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="275dp"
        android:background="@drawable/myshape"
        android:hint="Enter email to reset password"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/reset_pass"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/myshape"
        android:fontFamily="@font/charis_bold"
        android:text="reset password" />


</RelativeLayout>